--- a/env.yml
+++ b/env.yml
@@ -7,7 +7,7 @@ dependencies:
   - trim-galore
   - bwa==0.7.17
   - hisat2==2.2.1
-  - python>=3.8
+  - python>=3.8,<=3.12
   - pip>=21.2
   - picard>=2.27
   - samtools>=1.14
